made changes to link colors

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                                             <!-- Summary -->
                                             <div class="col-md-7 mt-3 mb-3">
                                                 <h6 class="modal-heading mb-4">Admin Dashboard & Medical Emergency SMS System</h6>
-                                                <p>Riders For Life was an 8 week Labs team project built for the non-profit Safe Mothers, Safe Babies based out of Uganda. Working with a team of 9 other Lambda students, I primarily focused on building the backend database and integrating Frontline SMS to use as an emergency ride request system for pregnant mothers and boda drivers in Uganda. </p>
+                                                <p>Riders For Life was an 8 week Labs team project built for the non-profit Safe Mothers, Safe Babies based out of Uganda. Working with a team of 9 other Lambda students, I primarily focused on building the backend database and integrating <a href="https://www.frontlinesms.com/" target="_blank" class="web-links">Frontline SMS </a> to use as an emergency ride request system for pregnant mothers and boda drivers in Uganda. </p>
                                             </div> <!--End Summary-->
                                             <!-- Tech Stack -->
                                             <div class="col-md-5 mt-3 mb-3 ">
@@ -535,7 +535,7 @@
                                             <!-- Summary -->
                                             <div class="col-md-7 mt-3 mb-3">
                                                 <h6 class="modal-heading mb-4">Using RESTful API's & Redux</h6>
-                                                <p>The application was created to demonstrate and practice using asynchronous action creators in Redux by returning data from an API of my choice. I chose to use the <a href="https://rickandmortyapi.com/" target="_blank" >Rick and Morty</a> API to create the Rick & Morty Universe app; which displays character, location, and episodic data from it. </p>
+                                                <p>The application was created to demonstrate and practice using asynchronous action creators in Redux by returning data from an API of my choice. I chose to use the <a class="web-links" href="https://rickandmortyapi.com/" target="_blank" >Rick and Morty</a> API to create the Rick & Morty Universe app; which displays character, location, and episodic data from it. </p>
                                             </div> <!--End Summary-->
                                             <!-- Tech Stack -->
                                             <div class="col-md-5 mt-3 mb-3 ">
@@ -691,7 +691,7 @@
                                             <!-- Summary -->
                                             <div class="col-md-7 mt-3 mb-3">
                                                 <h6 class="modal-heading mb-4">Responsive Web Design & Product Landing Page</h6>
-                                                <p>Bella Tea Room is a project built for one of five <a href="https://www.freecodecamp.org/">freecodecamp.org</a> Responsive Web design Project. Following criteria set forth by the provided user stories, I created a landing page that gives a quick insight to what Bella Tea Room is and what services they provide to potential customers </p>
+                                                <p>Bella Tea Room is a project built for one of five <a class="web-links" href="https://www.freecodecamp.org/">freecodecamp.org</a> Responsive Web design Project. Following criteria set forth by the provided user stories, I created a landing page that gives a quick insight to what Bella Tea Room is and what services they provide to potential customers </p>
                                             </div> <!--End Summary-->
                                             <!-- Tech Stack -->
                                             <div class="col-md-5 mt-3 mb-3 ">
