Fixed overflow-x not hiding  when using smaller devices

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             </div>
         </nav>
     </header>
-    <main role="main">
+    <main role="main" >
         <!-- Jumbotron -->
-        <section class="header ">
+        <section class="jumbotron-header ">
             <div class="jumbotron jumbotron-fluid d-flex flex-column justify-content-center  ">
                 <div class="jumbotron-img  mx-auto">
                     <img src="images/headshot.png" alt="Placeholder image" class="rounded-circle headshot">
