--- a/index.html
+++ b/index.html
@@ -1048,10 +1048,10 @@
     <footer>
         <div class="container ">
             <div class="row justify-content-between " >
-                <div class="col-md-3 col-sm-12 copyright">
+                <div class="col-md-3 col-sm-12 ">
                     <p class="my-2">&copy;2019 Jade E. Lopez</p>
                 </div>
-                <div class="col-md-5 col-sm-12 footer-list">
+                <div class="col-md-5 col-sm-12 ">
                     <ul class="d-flex justify-content-center">
                         <li class="nav-item">
                             <a href="#about" class="nav-link">About</a>
@@ -1068,7 +1068,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-12 social">
-                    <div class="social-icons d-inline-flex ">
+                    <div class="social-icons d-inline-flex  ">
                         <a href="https://www.linkedin.com/in/jade-lopez-3a31baa2" target="_blank">
                             <i class="fab fa-linkedin fa-2x my-2 mx-2"></i>
                         </a>
