--- a/index.html
+++ b/index.html
@@ -818,8 +818,8 @@
                             <div class="timeline"></div>
                             <div class="col-md-3 col-sm-10 left-timeline">
                                 <div class=" card-body d-flex flex-column left-wrapper">
-                                    <h4>5150Whips</h4>
-                                    <p>2018 - 2019</p>
+                                    <h4>Riders For Life</h4>
+                                    <p>Oct 2019 - Nov 2019</p>
                                 </div>
                             </div>
                             <div class="col-md-1 icon-timeline">
@@ -830,12 +830,8 @@
 
                             <div class="col-md-8 col-sm-10 right-timeline ">
                                 <div class=" card-body d-flex flex-column right-wrapper">
-                                    <h4>Web Developer & Designer</h4>
-                                    <p>Hired by 5150 whips to fix, maintain, and make updates to the current website.
-                                        Currently
-                                        working with owner to create a new website which I will be updating and maintaining
-                                        when
-                                        completed.
+                                    <h4>Web Developer</h4>
+                                    <p>This was a two-part application built for the non-profit Safe Mothers, Safe Babies. The first part was a Node backend that interacted with Frontline SMS and allowed for emergency SMS interaction between users. The React frontend, and the second part of the application, was developed as an admin dashboard that allowed administrators to view, add, delete, and edit user data.
                                     </p>
                                 </div>
                             </div>
@@ -857,19 +853,15 @@
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Web Developer & Designer</h4>
-                                    <p>Hired by 5150 whips to fix, maintain, and make updates to the current website.
-                                        Currently
-                                        working with owner to create a new website which I will be updating and maintaining
-                                        when
-                                        completed.
+                                    <p>Hired by 5150 whips to fix, maintain, and make updates to the current website. Worked with the owner to create a new website to fit his business needs and company brans and design aesthetic.
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <!-- 3 -->
                         <div class="row no-gutters ">
-                            <div class="col-md-3 left-timeline left-wrapper ">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-3 left-timeline ">
+                                <div class=" card-body d-flex flex-column left-wrapper ">
                                     <h4>Cryptocurrency</h4>
                                     <p>Nov 2017 - Jan 2018</p>
                                 </div>
@@ -919,18 +911,18 @@
                         <!-- 1 -->
                         <div class="row no-gutters">
                             <div class="timeline"></div>
-                            <div class="col-md-3">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-3 col-sm-10 left-timeline">
+                                <div class=" card-body d-flex flex-column left-wrapper">
                                     <h4>2019 - Present</h4>
                                 </div>
                             </div>
-                            <div class="col-md-1">
+                            <div class="col-md-1 icon-timeline">
                                 <div class="icon-wrapper">
                                     <i class="fas fa-graduation-cap"></i>
                                 </div>
                             </div>
-                            <div class="col-md-8 pl-5">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-8 col-sm-10 right-timeline">
+                                <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Lambda School</h4>
                                     <p>Full Stack Web Developer</p>
                                 </div>
@@ -938,18 +930,18 @@
                         </div>
                         <!-- 2 -->
                         <div class="row no-gutters">
-                            <div class="col-md-3">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-3 col-sm-10 left-timeline">
+                                <div class=" card-body d-flex flex-column left-wrapper">
                                     <h4>2016 - 2019</h4>
                                 </div>
                             </div>
-                            <div class="col-md-1">
+                            <div class="col-md-1 icon-timeline">
                                 <div class="icon-wrapper ">
                                     <i class="fas fa-graduation-cap "></i>
                                 </div>
                             </div>
-                            <div class="col-md-8 pl-5">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-8 col-sm-10 right-timeline">
+                                <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Foothill College</h4>
                                     <p>AA in Graphic &amp; Interactive Design</p>
                                 </div>
@@ -957,18 +949,18 @@
                         </div>
                         <!-- 3 -->
                         <div class="row no-gutters">
-                            <div class="col-md-3">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-3 col-sm-10 left-timeline">
+                                <div class=" card-body d-flex flex-column left-wrapper">
                                     <h4>2007 - 2010</h4>
                                 </div>
                             </div>
-                            <div class="col-md-1">
+                            <div class="col-md-1 icon-timeline">
                                 <div class="icon-wrapper ">
                                     <i class="fas fa-graduation-cap "></i>
                                 </div>
                             </div>
-                            <div class="col-md-8 pl-5">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-8 col-sm-10 right-timeline">
+                                <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>San Francisco State University</h4>
                                     <p>Music - Vocal Performance in Opera</p>
                                 </div>
@@ -976,18 +968,18 @@
                         </div>
                         <!-- 4 -->
                         <div class="row no-gutters">
-                            <div class="col-md-3">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-3 col-sm-10 left-timeline">
+                                <div class=" card-body d-flex flex-column left-wrapper">
                                     <h4>2001 - 2007</h4>
                                 </div>
                             </div>
-                            <div class="col-md-1">
+                            <div class="col-md-1 icon-timeline">
                                 <div class="icon-wrapper">
                                     <i class="fas fa-graduation-cap  "></i>
                                 </div>
                             </div>
-                            <div class="col-md-8 pl-5">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-8 col-sm-10 right-timeline">
+                                <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Riverside Community College</h4>
                                     <p>Associate in Science</p>
                                 </div>
@@ -995,18 +987,18 @@
                         </div>
                         <!-- 5 -->
                         <div class="row no-gutters">
-                            <div class="col-md-3">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-3 col-sm-10 left-timeline">
+                                <div class=" card-body d-flex flex-column left-wrapper">
                                     <h4>1997 - 2001</h4>
                                 </div>
                             </div>
-                            <div class="col-md-1">
+                            <div class="col-md-1 icon-timeline">
                                 <div class="icon-wrapper">
                                     <i class="fas fa-graduation-cap "></i>
                                 </div>
                             </div>
-                            <div class="col-md-8 pl-5">
-                                <div class=" card-body d-flex flex-column">
+                            <div class="col-md-8 right-timeline">
+                                <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Redlands East Valley Highschool</h4>
                                     <p>Highschool Diploma</p>
                                 </div>
