--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="card container section-margin">
                 <div class="row">
                     <div class="col-lg-12 px-4">
-                        <h2 class="card-title text-center mt-4">Web Developer, Musician, Dancer, Dreamer </h2>
+                        <h2 class="card-title text-center mt-4">Web Developer, Designer, Musician, Dreamer </h2>
                         <!-- NEED TO EDIT!!!!! Tell a story with interesting facts musical, dancing, random facts...personalize it! -->
                         <div class="card-body">
                             <p>Hello! I am a Graphic Designer/Web Developer who enjoys being immersed in a creatively
