--- a/index.html
+++ b/index.html
@@ -874,8 +874,7 @@
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Graphic Designer</h4>
-                                    <p>Designed a cover for a company booklet presentation explaining cryptocurrency, mining
-                                        cryptocurrency, and how to build and operate a cryptocurrency mining.</p>
+                                    <p>Designed a cover for a company booklet presentation explaining cryptocurrency, mining cryptocurrency, and how to build and operate a cryptocurrency mining.</p>
                                 </div>
                             </div>
                         </div>
@@ -895,10 +894,7 @@
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Graphic Designer</h4>
-                                    <p>Hired to create a logo and branding for a "Let's Play" style YouTube page called 12am
-                                        Miscreants. Designed a central logo to be used in all collateral materials and
-                                        combined
-                                        it with thier YouTube banned I designed as well.</p>
+                                    <p>Hired to create a logo and branding for a "Let's Play" style YouTube page called 12am Miscreants. Designed a central logo to be used in all collateral materials and combined it with their YouTube banner I designed as well.</p>
                                 </div>
                             </div>
                         </div>
