--- a/index.html
+++ b/index.html
@@ -65,21 +65,14 @@
         <section class="jumbotron-header ">
             <div class="jumbotron jumbotron-fluid d-flex flex-column justify-content-center  ">
                 <div class="jumbotron-img  mx-auto">
-                    <img src="images/headshot.png" alt="Placeholder image" class="rounded-circle headshot">
+                    <img src="images/headshot.png" alt="Jade's headshot" class="rounded-circle headshot">
                 </div>
                 <div class="header-info mx-auto text-center ">
                     <h1>J<span class="uppercase">ade</span> L<span class="uppercase">opez</span></h1>
                     <h4>Full Stack Web Developer <br> &amp; <br> Web Designer</h4>
                 </div>
-                <div class="mx-auto d-flex flex-row " role="group" aria-label="Button Group">
-                    <!-- Button Goes to Contact Form? -->
-                    <div class="button-container">
-                        <a href="#contact" class="btn uppercase ">Hire Me</a>
-                    </div>
-                    <!-- Button needs to go to either separate page for resume or pdf most likely resume page -->
-                    <div class="button-container">
-                        <a href="./assests/jlopez_resume.pdf" target="_blank" class="btn uppercase">Resume</a>
-                    </div>
+                <div class="button-container mx-auto" aria-label="Resume Button">
+                    <a href="./assests/jlopez_resume.pdf" target="_blank" class="btn uppercase">Resume</a>
                 </div>
             </div>
         </section>
@@ -91,16 +84,15 @@
             <div class="card container section-margin">
                 <div class="row">
                     <div class="col-lg-12 px-4">
-                        <h2 class="card-title text-center mt-4">Web Developer, Designer, Musician, Dreamer </h2>
+                        <h2 class="card-title text-center mt-4">Web Developer, Designer, Musician, Trekkie </h2>
                         <!-- NEED TO EDIT!!!!! Tell a story with interesting facts musical, dancing, random facts...personalize it! -->
                         <div class="card-body">
-                            <p>Hello! I am a Graphic Designer/Web Developer who enjoys being immersed in a creatively
-                            charged atmosphere, and is passionate about design and learning new technologies. Currently, I am studying Full Stack Web Development at <a class="web-links" href="https://lambdaschool.com/" target="_blank">Lambda School </a>, where I have gained experience with HTML, CSS, JavaScript, React.js, Node.js, Knex.js, and more. 
+                            <p>Hello! I am a Graphic Designer/Web Developer who enjoys being immersed in a creatively charged atmosphere,  is passionate about design, and learning new technologies. I recently graduated from the Full Stack Web Development course track at <a class="web-links" href="https://lambdaschool.com/" target="_blank">Lambda School</a>, where I have gained experience with HTML, CSS, JavaScript, React.js, Node.js, Knex.js, and more. 
                             
                             </p>
                             <p>These experiences, along with working 14 years in the customer service industry, have taught me creative problem-solving and effective communication skills as well as how to work in teams.  Personally, it is my goal to constantly push myself to learn new things so that I may grow as a designer, developer, and as an individual.
                             </p>
-                            <p>Outside of web development, I love to do anything that engages my creative side. This includes anything from singing/playing/listening to music of all genres, cooking, and drawing. Other times I enjoy reading a good book or to travel here in Colorado or abroad.</p>
+                            <p>Outside of web development, I love to do anything that engages my creativity. This includes anything from singing/playing/listening to the music of all genres, cooking, and drawing. I also have an obsession with Assassin's Creed and love everything Star Trek!</p>
                         </div>
                     </div>
                 </div>
@@ -178,10 +170,7 @@
         </section>
 
         <!-- Portfolio -->
-        <!-- CHANGE IMAGES!! ==> cards: logos with picture backgrounds or website on laptop or phone...modals need some sort of images as well or do videos -->
-        <!-- Nasa project once we have data picker working -->
-        <!-- Add works were you go above and beyond stretch -->
-        <!-- Create pages for each work and don't forget to add github and demo code with buttons -->
+        <!-- CHANGE IMAGES!! ==> cards: logos with picture backgrounds or website on laptop or phone...modals need some sort of images as well or do videos/GIF's -->
         <section class=" mb-5" id="portfolio">
             <h1 class="text-center my-5 section-title">Portfolio</h1>
             <div class="section-margin">
@@ -853,7 +842,7 @@
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Web Developer & Designer</h4>
-                                    <p>Hired by 5150 whips to fix, maintain, and make updates to the current website. Worked with the owner to create a new website to fit his business needs and company brans and design aesthetic.
+                                    <p>Hired by 5150 whips to fix, maintain, and make updates to the current website. Worked with the owner to create a new website to fit his business needs, company brand, and design aesthetic.
                                     </p>
                                 </div>
                             </div>
@@ -874,7 +863,7 @@
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Graphic Designer</h4>
-                                    <p>Designed a cover for a company booklet presentation explaining cryptocurrency, mining cryptocurrency, and how to build and operate a cryptocurrency mining.</p>
+                                    <p>Designed a Art Deco-inspired cover for a company booklet presentation explaining cryptocurrency, mining cryptocurrency, and how to build and operate a cryptocurrency mining rig.</p>
                                 </div>
                             </div>
                         </div>
@@ -894,7 +883,7 @@
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4>Graphic Designer</h4>
-                                    <p>Hired to create a logo and branding for a "Let's Play" style YouTube page called 12am Miscreants. Designed a central logo to be used in all collateral materials and combined it with their YouTube banner I designed as well.</p>
+                                    <p>Created and designed the logo and branding for a "Let's Play" style YouTube page called 12am Miscreants. Designed a central logo to be used in all collateral materials and combined it with their YouTube banner I designed as well.</p>
                                 </div>
                             </div>
                         </div>
@@ -1006,7 +995,6 @@
         </section>
         
         <!-- Contact -->
-        <!-- FIX STYLING ASAP : class? picture background? address moves down here to the left then contact on the right-->
         <section id="contact">
             <h1 class="text-center my-5 section-title">Contact Me</h1>
             <div class="contact-margin">
