Updated skils section

--- a/index.html
+++ b/index.html
@@ -107,59 +107,91 @@
                 <!-- Web Dev -->
                 <div class=" container card mb-5">
                     <h2 class="card-title text-center my-5"> Web Development</h2>
-                    <div class="d-flex justify-content-around flex-wrap">
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/HTML5.png" alt="Html 5 logo">
+                    <div class=" d-flex justify-content-around flex-wrap col-lg-12">
+                        <div class="flex-column text-center m-3 icon">
+                            <!-- HTML -->
+                            <img class="icons" src="./images/HTML5.png" alt="Html 5 logo">
                             <p class="mt-3 mb-4">HTML 5</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/CSS3.png" alt="Css 3 logo">
+                        <!-- CSS -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/CSS3.png" alt="Css 3 logo">
                             <p class="mt-3 mb-4">CSS 3</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/javaScript.png" alt="Javascript Logo">
+                        <!-- JS -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/javaScript.png" alt="Javascript Logo">
                             <p class="mt-3 mb-4">JavaScript</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/bootstrap.png" alt="Bootstrap Logo">
+                        <!-- Bootstrap -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/bootstrap.png" alt="Bootstrap Logo">
                             <p class="mt-3 mb-4">Bootstrap</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/react-dark.png" alt="React Logo">
+                        <!-- React -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/react-dark.png" alt="React Logo">
                             <p class="mt-3 mb-4">React</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/less.png" alt="Less Logo">
-                            <p class="mt-3 mb-4">Less</p>
+                        <!-- Node -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/nodeJS.png" alt="Node.js Logo">
+                            <p class="mt-3 mb-4">Node.js</p>
                         </div>
+                        <!-- Python -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/python.png" alt="Python Logo">
+                            <p class="mt-3 mb-4">Python</p>
+                        </div>
+                        <!-- SQL -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/sqlite.png" alt="SQLite Logo">
+                            <p class="mt-3 mb-4">SQLite3</p>
+                        </div>
+                        <!-- Sass -->
+                        <div class="flex-column text-center m-3 icons second-row">
+                            <img class="icons" src="./images/sass_logo.png" alt="Sass Logo">
+                            <p class="mt-3 mb-4">Sass</p>
+                        </div>
+                        <!-- Less -->
+                        <div class="flex-column text-center m-3 icons second-row">
+                            <img class="icons" src="./images/less.png" alt="Less Logo">
+                            <p class="mt-3 mb-4">Less</p>
+                        </div>  
                     </div>
                 </div>
                 <!-- Graphic and Web Software -->
                 <div class="container card " id="Software">
                     <h2 class="card-title text-center my-5"> Graphic and Web Software</h2>
                     <div class="d-flex justify-content-around flex-wrap">
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/photoshop.png" alt="Adobe Photoshop logo">
+                        <!-- Photoshop -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/photoshop.png" alt="Adobe Photoshop logo">
                             <p class="mt-3 mb-4">Photoshop</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/Illustrator.png" alt="Adobe Illustrator logo">
+                        <!-- Illustrator -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/Illustrator.png" alt="Adobe Illustrator logo">
                             <p class="mt-3 mb-4">Illustrator</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/indesign.png" alt="Adobe InDesign Logo">
+                        <!-- Indesign -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/indesign.png" alt="Adobe InDesign Logo">
                             <p class="mt-3 mb-4">InDesign</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/dreamweaver.png" alt="Adobe DreamWeaver logo">
+                        <!-- Dreamweaver -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/dreamweaver.png" alt="Adobe DreamWeaver logo">
                             <p class="mt-3 mb-4">DreamWeaver</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/adobe-xd.png" alt="Adobe XD logo">
+                        <!-- XD -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/adobe-xd.png" alt="Adobe XD logo">
                             <p class="mt-3 mb-4">Adobe XD</p>
                         </div>
-                        <div class="flex-column text-center m-3">
-                            <img src="./images/vs_code.png" alt="Visual Studio Code Logo">
+                        <!-- VS Code -->
+                        <div class="flex-column text-center m-3 icons">
+                            <img class="icons" src="./images/vs_code.png" alt="Visual Studio Code Logo">
                             <p class="mt-3 mb-4">VS Code</p>
                         </div>
                     </div>
