--- a/index.html
+++ b/index.html
@@ -241,34 +241,23 @@
                                                 <img src="images/cypberpunk.png" alt="CyberPunk Mud site">
                                             </div>  
                                         </div> <!-- End Video -->
-                                        <div class="row d-flex justify-content-center text">
-                                            <!-- Summary -->
-                                            <div class="col-md-7 mt-3 mb-3">
-                                                <h6 class="modal-heading mb-4">Multi-User Dungeon Game</h6>
-                                                <p>For my first Computer Science Build Week at <a class="web-links" href="https://lambdaschool.com/" target="_blank">Lambda</a>, I and four other students had to create a simple interactive MUD client and server. With only one day to learn Django, we successfully built and deployed a backend using an algorithm to generate 101 rooms that multiple players could traverse using our React front-end. Though I worked on both client and server sides of the project, I took on the role of UX/UI Designer to come up with the retro-cyberpunk aesthetic of our game using <a class="web-links" href="https://www.figma.com/file/vXoOUzNlbGbiU7MdHe0kQm/MUD-Wireframe?node-id=0%3A1" target="_blank">Figma</a>.</p>
-                                            </div> <!--End Summary-->
-                                            <!-- Tech Stack -->
-                                            <div class="col-md-5 mt-3 mb-3 ">
-                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
-                                                <div class="row">
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>React</li>
-                                                            <li>Redux</li>
-                                                            <li>React-Vis</li>
-                                                            <li>Sass</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Python</li>
-                                                            <li>Django</li>
-                                                            <li>PostgreSQL</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div> <!--End Tech Stack-->
-                                        </div>
+                                        <!-- Summary -->
+                                        <div class="row d-flex flex-column text-background p-4">
+                                            <div class="modal-heading ">
+                                                <h5  >Multi-User Dungeon Game</h5>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">React, Redux, React-Vis, Sass, Python, Django, PostgreSQL</span></p>
+                                            </div>
+                                            <!-- Description -->
+                                            <div class="modal-description px-4">
+                                                <p>I and four other students developed a simple interactive, multi-user game during the Computer Science Build Week at <a class="web-links" href="https://lambdaschool.com/" target="_blank">Lambda</a>. Consisting of 101 rooms, users can explore this retro cyberpunk-inspired game and see other users in real-time.</p>
+                                                <ul class="pl-3 .modal-list">
+                                                    <li class="p-1" >With only one day to learn  Django, we deployed a RESTful API backend to Heroku and used PostgreSQL for data persistence.</li>
+                                                    <li class="p-1">Implemented an algorithm on the backend to generate a spiral maze with which users can interact with and explore.</li>
+                                                    <li class="p-1">Styled with Sass, the React/Redux frontend uses React-vis to display the maze in a spiral node like fashion.</li>
+                                                    <li class="p-1">I took on the role as the UX/UI designer and created/implemented the retro-cyberpunk aesthetic of the game using <a class="web-links" href="https://www.figma.com/file/vXoOUzNlbGbiU7MdHe0kQm/MUD-Wireframe?node-id=0%3A1" target="_blank">Figma</a> to create a moodboard and wireframes.</li>
+                                                </ul>
+                                            </div><!-- End Description -->
+                                        </div><!-- End Summary -->
                                     </div><!--End modal-container-->
                                 </div> <!--End Body-->
                                 <!-- Footer -->
@@ -318,36 +307,23 @@
                                                 <iframe width="720" height="405" src="https://www.youtube.com/embed/KM4jNYUOg7Y?color=white" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                             </div> 
                                         </div> <!-- End Video -->
-                                        <div class="row d-flex justify-content-center text">
-                                            <!-- Summary -->
-                                            <div class="col-md-7 mt-3 mb-3">
-                                                <h6 class="modal-heading mb-4">Admin Dashboard & Medical Emergency SMS System</h6>
-                                                <p>Riders For Life was an 8 week Labs team project built for the non-profit Safe Mothers, Safe Babies based out of Uganda. Working with a team of 9 other Lambda students, I primarily focused on building the backend database and integrating <a href="https://www.frontlinesms.com/" target="_blank" class="web-links">Frontline SMS </a> to use as an emergency ride request system for pregnant mothers and boda drivers in Uganda. </p>
-                                            </div> <!--End Summary-->
-                                            <!-- Tech Stack -->
-                                            <div class="col-md-5 mt-3 mb-3 ">
-                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
-                                                <div class="row">
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>React</li>
-                                                            <li>Redux</li>
-                                                            <li>grommet</li>
-                                                            <li>priceline-design-system</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Frontline SMS</li>
-                                                            <li>Node</li>
-                                                            <li>Express</li>
-                                                            <li>PostgreSQL</li>
-                                                            <li>Geolib</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div> <!--End Tech Stack-->
-                                        </div>
+                                        <!-- Summary -->
+                                        <div class="row d-flex flex-column text-background p-4">
+                                            <div class="modal-heading ">
+                                                <h5>Admin Dashboard & Medical Emergency SMS System</h5>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">React, Redux, FrontlineSMS, Node, Express, GeoLib, PostgreSQL</span></p>
+                                            </div>
+                                            <!-- Description -->
+                                            <div class="modal-description px-4">
+                                                <p>The 'Riders for Life'  project was a team collaboration consisting of 1 UX Designer and 6 other Web Developers. As part of Lambda Labs, the goal of the project was to create a two-part application for the non-profit <a href="https://www.safemotherssafebabies.org/" target="_blank" class="web-links">Safe Mothers, Safe Babies</a> in Uganda. </p>
+                                                <ul class="pl-3 .modal-list">
+                                                    <li class="p-1" >Working with the non-profits’ stake-holder for 8 weeks, we increased the productivity, reliability, and usability of both parts of the application; enhancing the overall quality of the users experience.</li>
+                                                    <li class="p-1">My primary focus, was building the database for our node backend, and integrating<a href="https://www.frontlinesms.com/" target="_blank" class="web-links">Frontline SMS </a>. This text-messaging cloud service provided a reliable SMS emergency ride request system for pregnant mothers and Boda drivers in Uganda.</li>
+                                                    <li class="p-1">We employed the use of the<a href="https://www.npmjs.com/package/geolib/" target="_blank" class="web-links"> GeoLib </a>library to help the application locate the nearest driver to a pregnant mother requesting a ride, and then dispatched them to said mother for emergency services.</li>
+                                                    <li class="p-1">A React/Redux administrative dashboard was developed to allow administrative users to interact with mother/driver data collected on the ground in Uganda.</li>
+                                                </ul>
+                                            </div><!-- End Description -->
+                                        </div><!-- End Summary -->
                                     </div><!--End modal-container-->
                                 </div> <!--End Body-->
                                 <!-- Footer -->
